src/test/resources/stakeholders/invalid/nonuser/src/main/requirements/JustDoIt.useCase
package nonuser

useCase JustDoIt {
    display = "Just do it"
}

scenario HappyPath {
    description = "All's well that ends well"
    steps       = [
        Person(Duck),
        Command(DoIt),
        Aggregate(System)
    ]
}
